[#153] Refactor the constructor of the TraverseEngine and the request method in the FunctionsClient